--- a/packages/home/public/manifest.json
+++ b/packages/home/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tools-React",
+  "name": "Tools for React",
   "icons": [
     {
       "src": "favicon.ico",
