--- a/packages/home/package.json
+++ b/packages/home/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "home-start": "react-scripts start",
-    "home-build": "react-scripts build",
-    "home-test": "react-scripts test",
-    "home-eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
