--- a/packages/c-common/package.json
+++ b/packages/c-common/package.json
@@ -2,30 +2,27 @@
   "name": "c-common",
   "version": "0.1.0",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.tsx",
   "scripts": {
-    "build": "rimraf dist && rollup --config",
+    "build": "npm run clean && npm run cpy",
+    "clean": "rimraf dist",
+    "tsc": "tsc",
+    "cpy": "cpy src/** dist",
     "test": "jest"
   },
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.27",
+    "fs-extra": "^11.1.0",
     "jest": "^29.4.2",
+    "ncp": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.14.0",
-    "rollup-plugin-node-resolve": "^5.0.3",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "ts-jest": "^29.0.5",
-    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "rimraf": "^3.0.2",
-    "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-static-files": "^0.2.0",
-    "sass": "^1.58.0"
+    "cpy-cli": "^4.2.0",
+    "rimraf": "^3.0.2"
   }
 }
