--- a/packages/c-common/tsconfig.json
+++ b/packages/c-common/tsconfig.json
@@ -3,18 +3,15 @@
     "jsx": "react",
     "allowJs": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+
+    "declaration": true,
+
+    "baseUrl": ".",
+    "rootDir":"./src",
+    "outDir":"./dist"
   },
-  "files": [],
   "include": [
     "src"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
   ]
 }
