--- a/packages/c-common/tsconfig.json
+++ b/packages/c-common/tsconfig.json
@@ -5,6 +5,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
 
+    "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
 
     "baseUrl": ".",
