--- a/packages/c-common/package.json
+++ b/packages/c-common/package.json
@@ -1,22 +1,24 @@
 {
   "name": "c-common",
   "version": "0.1.0",
-  "type": "module",
-  "main": "dist/index.tsx",
+  "type": "commonjs",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "npm run clean && npm run cpy",
+    "build": "npm run clean && npm run tsc && npm run cpy",
     "clean": "rimraf dist",
     "tsc": "tsc",
-    "cpy": "cpy src/** dist",
+    "cpy": "cpy src/css/** dist/css",
     "test": "jest"
   },
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "fs-extra": "^11.1.0",
     "jest": "^29.4.2",
     "ncp": "^2.0.0",
+    "node": "^19.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5"
