--- a/packages/c-common/package.json
+++ b/packages/c-common/package.json
@@ -4,10 +4,7 @@
   "type": "commonjs",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run clean && npm run tsc && npm run cpy",
-    "clean": "rimraf dist",
-    "tsc": "tsc",
-    "cpy": "cpy src/css/** dist/css",
+    "build": "node build.js",
     "test": "jest"
   },
   "dependencies": {
