--- a/package.json
+++ b/package.json
@@ -11,12 +11,27 @@
     "graph": "nx graph"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
+    "@types/sass": "^1.43.1",
+    "antd": "^5.2.0",
+    "jest": "^29.4.2",
+    "node": "^18.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
+    "sass": "^1.58.0",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "lerna": "^6.4.1",
+    "rimraf": "^3.0.2"
   },
   "eslintConfig": {
     "extends": [
@@ -35,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "lerna": "^6.4.1"
   }
 }
