--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
+    "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
     "antd": "^5.2.0",
     "jest": "^29.4.2",
